Made some changes that were proposed by ...
eclispe findbugs plugin.